--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # cmake_minimum_required(VERSION <specify CMake version here>)
-project(untitled C)
+project(cds C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(untitled bst/main.c bst/BST.h bst/BST.c)
+add_executable(cds bst/main.c bst/BST.h avl/AVL.c avl/main.c avl/AVL.h avl/AVL.c)
