--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(cds C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(cds bst/main.c bst/BST.h avl/AVL.c avl/main.c avl/AVL.h avl/AVL.c)
+add_executable(cds tree/bst/main.c tree/bst/BST.h tree/avl/AVL.c tree/avl/main.c tree/avl/AVL.h tree/avl/AVL.c)
